--- a/MauiAutoSuggestBox/MauiAutoSuggestBox.csproj
+++ b/MauiAutoSuggestBox/MauiAutoSuggestBox.csproj
@@ -5,6 +5,7 @@
 		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
 		<!-- <TargetFrameworks>$(TargetFrameworks);net7.0-tizen</TargetFrameworks> -->
 		<OutputType>Exe</OutputType>
+		<Nullable>enable</Nullable>
 		<RootNamespace>MauiAutoSuggestBox</RootNamespace>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
